# core-bank

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose-cb.yaml  docker-compose-postgres.yaml
migrations/2022-02-13-135329_create_transaction/: down.sql  up.sql
migrations/2022-02-15-142646_create_account_detail/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/core/: address.rs  dto.rs  impl_account.rs  impl_address.rs  impl_audit_account.rs  impl_audit_transaction.rs  impl_transaction.rs  mod.rs
src/db/: mod.rs
src/db/dao/: dao_account.rs  dao_transaction.rs  mod.rs  pagination.rs
