[package]
name = "core-bank"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "numeric", "chrono", "uuid", "serde_json", "bigdecimal"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"]}
diesel-derive-enum = { version = "1.1.2", features = ["postgres"]}
bigdecimal = {version = "0.1.2", features = ["serde"]}
uuid = "0.6.5"
k256 = "0.10.2"
rand_core = "0.6.3"
sha3 = "0.10.0"
sha2 = "0.10.1"
bs58 = "0.3.1"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-core-client  = "18.0.0"
serde = "1.0.136"
serde_json = "1.0.79"