[package]
name = "core-bank"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "numeric", "chrono", "uuidv07", "serde_json", "bigdecimal", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"]}
diesel-derive-enum = { version = "1.1.2", features = ["postgres"]}
bigdecimal = { version = "0.0.15", features = ["serde"]}
uuid = { version = "0.8.2", features = ["serde", "v4"]}
k256 = "0.10.2"
rand_core = "0.6.3"
sha3 = "0.10.0"
sha2 = "0.10.1"
bs58 = "0.3.1"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-core-client  = "18.0.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
rand = "0.8.5"